[package]
name = "semwave"
version = "0.4.0"
edition = "2024"
description = "Static analysis tool for semver bump propagation in Cargo workspaces"
license = "MIT"
repository = "https://github.com/uandere/semwave"
readme = "README.md"
keywords = ["semver", "versioning", "cargo", "static-analysis", "breaking-changes"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3"
rustdoc-json = "0.9.8"
rustdoc-types = "0.57.0"
semver = "1"
serde_json = "1"
toml = "0.8"
